1，整理logger包 2，整理networkchangedobserver 3，重写application的oncreate方法 4，改为配置形式配置软件的功能

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name="com.frand.easyandroid.util.netstate.FFNetworkStateReceiver" >
+        <receiver android:name="com.frand.easyandroid.netstate.FFNetworkStateReceiver" >
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
@@ -47,6 +47,7 @@
         <activity android:name=".activities.DemoImageActivity" />
         <activity android:name=".activities.DemoOtherActivity" />
         <activity android:name=".activities.DemoDownLoadActivity" />
+        <activity android:name=".activities.DemoExceptionActivity" />
         
         <!-- chiq activity 等组件的注册 -->
         <activity android:name=".activities.MainActivity" />
